--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -64,13 +64,13 @@
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 17<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-3 (from slide 10)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 3 and 4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 18</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 19</td>
+ valign="top">Jan 19<br>
+      <div style="text-align: center;">Lecture 4 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 20</td>
     </tr>
     <tr>
@@ -81,6 +81,10 @@ last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Review,
+Lecture
+4 (from slide 28)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Analysis Tools HW</span><br>
       </div>
@@ -279,3 +283,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
