--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -65,13 +65,13 @@
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 17<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O1 (from slide 40), O2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O1, O2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 18</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 19</td>
+ valign="top">Jan 19<br>
+      <div style="text-align: center;">Lectures O2, O3, O4 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 20</td>
     </tr>
     <tr>
@@ -81,7 +81,11 @@ last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 24</td>
+ valign="top">Jan 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O4 (from slide 25), O5</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 25</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 26</td>
