--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -20,11 +20,13 @@ font-family:Verdana
 <b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
 HOMEWORK
 AND PROGRAMS<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, seed file.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due TBD.&nbsp;
+&nbsp;&nbsp;&nbsp; Lab 1, due February 28.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="../labs/lab 01 linux shell.pdf" target="_top">Description</a>
+	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due March 30.&nbsp;
 	Description.<br>
-&nbsp;&nbsp;&nbsp; Lab 3, due TBD.<br>
+&nbsp;&nbsp;&nbsp; Lab 3, due April 27.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
 disk image,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
