--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -82,19 +82,23 @@ last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O4 (from slide 25), O5</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O4, O5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 25</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 26</td>
+ valign="top">Jan 26<br>
+      <div style="text-align: center;">Lecture P1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 27</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 30</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 31</td>
+ valign="top">Jan 31<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P1 (from slide 41)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 2</td>
@@ -131,7 +135,7 @@ Day obs.<br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 23<br>
       <div style="text-align: center;"><span style="font-style: italic;">Midterm
-Exam</span><br>
+Exam (Units O, P through P_)</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 24</td>
@@ -143,7 +147,11 @@ last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 28</td>
+ valign="top">Feb 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 2<br>
@@ -209,7 +217,11 @@ Break</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 30 </td>
+ valign="top">Mar 30<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 31 </td>
     </tr>
@@ -246,8 +258,15 @@ Break</span><br>
  valign="top">Apr 25</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 27</td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28</td>
+ valign="top">Apr 27<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span><br>
+      </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 1</td>
