--- a/teaching/cs316/resources.html
+++ b/teaching/cs316/resources.html
@@ -75,17 +75,15 @@ B. </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 8.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">06: Review: Recursion<br>
-      </td>
-      <td style="vertical-align: top;">Read: Main/Savitch Ch. 9. </td>
+      <td style="vertical-align: top;">06: Review: Searching and
+Sorting Arrays</td>
+      <td style="vertical-align: top;">Read: Main/Savitch Secs. 12.1,
+13.1, 13.2 (part).</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">07: Review: Searching and
-Sorting Arrays<br>
+      <td style="vertical-align: top;">07: Review: Recursion<br>
       </td>
-      <td style="vertical-align: top;">Read: Main/Savitch Secs. 12.1,
-13.1, 13.2 (part).<br>
-      </td>
+      <td style="vertical-align: top;">Read: Main/Savitch Ch. 9. </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">08: Trees<br>
