--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -81,23 +81,29 @@ last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Review,
+      <div style="text-align: center;">Review,
 Lecture
-4 (from slide 28)</span><br>
+4<br>
       </div>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Analysis Tools HW</span><br>
+      <div style="text-align: center;">Due:
+Analysis Tools HW<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 25</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 26</td>
+ valign="top">Jan 26<br>
+      <div style="text-align: center;">Lectures 4 and 6 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 27</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 30</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 31</td>
+ valign="top">Jan 31<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+6 (from 13), 5</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 2</td>
