--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -17,23 +17,26 @@
 <h1>CPSC 316, TR 2:00 - 3:15 PM, CAS 143, SPRING 2023</h1>
 </center>
 </center>
-<table border="1" width="100%">
+<table style="width: 100%;" border="1">
   <tbody>
     <tr bgcolor="#000000">
-      <td style="background-color: rgb(0, 0, 0);" width="20%">
+      <td style="background-color: rgb(0, 0, 0); width: 16%;">
       <center><b><font color="#ffffff"><font size="+0">MONDAY</font></font></b></center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" width="20%">
+      <td style="background-color: rgb(0, 0, 0); width: 16%;">
       <center><b><font color="#ffffff">TUESDAY</font></b></center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" width="20%">
+      <td style="background-color: rgb(0, 0, 0); width: 16%;">
       <center><b><font color="#ffffff">WEDNESDAY</font></b></center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" width="20%">
+      <td style="background-color: rgb(0, 0, 0); width: 16%;">
       <center><b><font color="#ffffff">THURSDAY</font></b></center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" width="20%">
+      <td style="background-color: rgb(0, 0, 0); width: 16%;">
       <center><b><font color="#ffffff">FRIDAY</font></b></center>
+      </td>
+      <td style="vertical-align: top; width: 16%; text-align: center;"><span
+ style="font-weight: bold;">WEEKLY SUMMARY</span><br>
       </td>
     </tr>
     <tr>
@@ -54,6 +57,12 @@
       </td>
       <td style="vertical-align: top;">Jan 13<br>
       </td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">1:
+Object-Oriented Software Development<br>
+2: Linked Lists<br>
+3: Algorithm Analysis<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -72,6 +81,10 @@
       <div style="text-align: center;">Lecture 4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 20</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">4:
+Stacks<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 23<br>
@@ -95,28 +108,44 @@ Analysis Tools HW<br>
       <div style="text-align: center;">Lectures 4 and 6 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 27</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">6:
+Searching &amp; Sorting Arrays<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 30</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 31<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-6 (from 13), 5</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 5 and 6, Linux review </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 2</td>
+ valign="top">Feb 2<br>
+      <div style="text-align: center;">Lectures 5 and 7 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 3</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">5:
+Queues<br>
+7: Recursion<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 7</td>
+ valign="top">Feb 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+7 (from slide 23)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 9</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 10</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 13</td>
@@ -130,6 +159,9 @@ Project 1</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 20</td>
@@ -148,6 +180,9 @@ Exam</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 24</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 27<br>
@@ -164,6 +199,9 @@ last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 3</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 6</td>
@@ -173,6 +211,9 @@ last withdraw day</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 9</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 10</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 13</td>
@@ -182,6 +223,9 @@ last withdraw day</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 16</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 17</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 20<br>
@@ -213,6 +257,9 @@ Break</span><br>
 Break</span><br>
       </div>
       </td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -225,6 +272,9 @@ Break</span><br>
  valign="top">Mar 30 </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 31 </td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 3</td>
@@ -234,6 +284,9 @@ Break</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 6</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 7</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 10</td>
@@ -243,6 +296,9 @@ Break</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 13</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 14</td>
+      <td
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 17</td>
@@ -252,6 +308,8 @@ Break</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 20</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 21</td>
+      <td style="vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 24</td>
@@ -261,6 +319,8 @@ Break</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 27</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28</td>
+      <td style="vertical-align: middle;"><br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 1</td>
@@ -276,6 +336,8 @@ Exam, 2:30 PM<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">May 4</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 5</td>
+      <td style="vertical-align: top;"><br>
+      </td>
     </tr>
   </tbody>
 </table>
