--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -95,19 +95,23 @@ last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 30</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 31<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P1 (from slide 41)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 2</td>
+ valign="top">Feb 2<br>
+      <div style="text-align: center;">Lectures P1, P2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 3</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 7</td>
+ valign="top">Feb 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P2 (from slide 32), P3</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 9</td>
