--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -135,27 +135,32 @@ Queues<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-7 (from slide 23)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 7 and 8 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 9</td>
+ valign="top">Feb 9<br>
+      <div style="text-align: center;">Lecture 8 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 10</td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">8:
+Trees<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 14</td>
+ valign="top">Feb 14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+8 (from slide 32)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 16<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Project 1</span><br>
+      <div style="text-align: center;">Due:
+Project 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
@@ -175,8 +180,8 @@ Day obs.<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 22</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 23<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Midterm
-Exam</span><br>
+      <div style="text-align: center;">Midterm
+Exam (Lectures 1 through 8)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 24</td>
@@ -331,6 +336,7 @@ Break</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 2:30 PM<br>
+(Lectures 8 through ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -351,4 +357,3 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
-
