--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -108,19 +108,23 @@ last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P2 (from slide 32), P3</span><br>
-      </div>
+      <div style="text-align: center;">Lectures P2, P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 9</td>
+ valign="top">Feb 9<br>
+      <div style="text-align: center;">Lecture P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 10</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 14</td>
+ valign="top">Feb 14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P3 (from slide 54)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 16</td>
@@ -137,9 +141,9 @@ Day obs.<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 22</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 23<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Midterm
-Exam (Units O, P through P_)</span><br>
+ valign="top">Feb 23<br style="font-style: italic;">
+      <div style="text-align: center;">Midterm
+Exam (Units O, P through P3)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 24</td>
@@ -152,8 +156,8 @@ last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 1</span><br>
+      <div style="text-align: center;">Due:
+Lab 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
@@ -279,6 +283,7 @@ Lab 3</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
+(Lectures P4, P5; Units M, D, F, X)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 3</td>
@@ -298,3 +303,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
