--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -25,7 +25,7 @@ AND PROGRAMS<br>
 	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
 	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due March 30.&nbsp;
-	Description.<br>
+	<a href="../labs/lab 2 pthreads and sems.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 27.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
 disk image,<br>
