--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -36,7 +36,23 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
  href="../project1/test_palindrome.cpp">test_palindrome</a><br>
 <br>
-&nbsp;&nbsp;&nbsp; Projects 2, 3 coming soon.<br>
+&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf">Heaps HW</a><br>
+&nbsp;&nbsp;&nbsp; Due in-class March 2<br>
+<br>
+&nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
+&nbsp;&nbsp;&nbsp; Due March 28<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project2/proj2%20huffman%20codes.pdf">Description</a>, <a
+ href="../project2/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp">Heap</a>,
+<a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp">Huffman</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project2/test_huffman.cpp">test_huffman</a><br>
+&nbsp;&nbsp;&nbsp; Incomplete files:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/HNode.cpp">HNode</a>,
+<a href="../project2/Huffman.cpp">Huffman</a><br>
+</font></b><b><font color="#868cde" face="Verdana" size="2"><br>
+&nbsp;&nbsp;&nbsp; Project 3 coming soon.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
