--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -152,20 +152,22 @@ Trees<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-8 (from slide 32)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture 8 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 16<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+9 (from start)</span><br>
+      </div>
       <div style="text-align: center;">Due:
 Project 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">9:
+Heaps<br>
       </td>
     </tr>
     <tr>
@@ -200,8 +202,8 @@ last withdraw day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Due:
+Heaps HW </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 3</td>
       <td
@@ -270,7 +272,11 @@ Break</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 27 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 28 </td>
+ valign="top">Mar 28<br>
+      <div style="text-align: center;">Due:
+Project 2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -322,7 +328,11 @@ Break</span><br>
  valign="top">Apr 25</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 27</td>
+ valign="top">Apr 27<br>
+      <div style="text-align: center;">Due:
+Project 3<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28</td>
       <td style="vertical-align: middle;"><br>
       </td>
