--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -18,7 +18,7 @@
 <h1>CPSC 4/526, TR 9:15 - 10:30 AM, CAS 134, SPRING 2023</h1>
 </center>
 </center>
-<table border="1" width="100%">
+<table style="width: 100%;" border="1">
   <tbody>
     <tr bgcolor="#000000">
       <td style="background-color: rgb(0, 0, 0);" width="20%">
@@ -121,13 +121,15 @@ last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P3 (from slide 54)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 16</td>
+ valign="top">Feb 16<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
     </tr>
     <tr>
@@ -154,15 +156,31 @@ Exam (Units O, P through P3)<br>
 last withdraw day</span><br>
       </div>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 28<br>
-      <div style="text-align: center;">Due:
-Lab 1<br>
+      <td
+ style="vertical-align: top; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Feb 28</span><br
+ style="color: rgb(0, 0, 0);">
+      <div
+ style="text-align: center; color: rgb(0, 0, 0); background-color: rgb(102, 255, 255);">Online
+videos: <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a><br>
+      </div>
+      <div
+ style="text-align: center; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Due:
+Lab 1</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (cont)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;"></span><br>
       </div>
       </td>
@@ -303,4 +321,3 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
-
