--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -21,6 +21,15 @@ font-family:Verdana
 HOMEWORK
 AND PROGRAMS <br>
 <br>
+&nbsp;&nbsp;&nbsp; Project 0 - Command-Line<br>
+&nbsp;&nbsp;&nbsp; Programming and the Linux<br>
+&nbsp;&nbsp;&nbsp; Environment<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project0/lab0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
+ href="../project0/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project0/hello.C">helloC</a>,
+<a href="../project0/hello.h">helloH</a>, <a href="../project0/main.C">mainC</a><br>
+<br>
 &nbsp;&nbsp;&nbsp; <a href="../analysis%20tools%20hw.pdf" target="_top">Analysis Tools
 HW</a><br>
 &nbsp;&nbsp;&nbsp; Due in-class January 24<br>
