--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -45,13 +45,13 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
  href="../project1/test_palindrome.cpp">test_palindrome</a><br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf">Heaps HW</a><br>
+&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf" target="_top">Heaps HW</a><br>
 &nbsp;&nbsp;&nbsp; Due in-class March 2<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
 &nbsp;&nbsp;&nbsp; Due March 28<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project2/proj2%20huffman%20codes.pdf">Description</a>, <a
+ href="../project2/proj2%20huffman%20codes.pdf" target="_top">Description</a>, <a
  href="../project2/makefile">makefile</a>,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp">Heap</a>,
 <a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp">Huffman</a>,<br>
