--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -157,8 +157,8 @@ Trees<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 16<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-9 (from start)</span><br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+9<span style="font-style: italic;"></span><br>
       </div>
       <div style="text-align: center;">Due:
 Project 1<br>
@@ -198,28 +198,38 @@ last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 28</td>
+ valign="top">Feb 28<br>
+      <div style="text-align: center;">Lecture
+9 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 2<br>
+      <div style="text-align: center;">Lectures 9 and 10 </div>
       <div style="text-align: center;"><span style="font-style: italic;"></span>Due:
 Heaps HW </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 3</td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">10:
+Priority Queues<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 7</td>
+ valign="top">Mar 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+10 (from slide 11), 11</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 9</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 10</td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">11:
+Balanced Trees<br>
       </td>
     </tr>
     <tr>
@@ -346,7 +356,7 @@ Project 3<br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 2:30 PM<br>
-(Lectures 8 through ?)<br>
+(Lectures 9 through ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
