--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -126,9 +126,7 @@ last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 16<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
     </tr>
@@ -178,9 +176,8 @@ Lab 1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 1</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (cont)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span>Lectures P4, P5 </div>
       <div style="text-align: center;"><span style="font-style: italic;"></span><br>
       </div>
       </td>
@@ -189,7 +186,12 @@ P4 (cont)</span><br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 7</td>
+ valign="top">Mar 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P5 (</span><span style="font-style: italic;">from slide 11)</span><span
+ style="font-style: italic;"></span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 9</td>
