--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -219,13 +219,14 @@ Priority Queues<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-10 (from slide 11), 11</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 10 and 11 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 9</td>
+ valign="top">Mar 9<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Review<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 10</td>
       <td
  style="background-color: rgb(0, 0, 0); vertical-align: middle;">11:
@@ -235,7 +236,11 @@ Balanced Trees<br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 14</td>
+ valign="top">Mar 14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+11 (from slide 33), Review</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 16</td>
