--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -187,20 +187,26 @@ Lab 1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 6</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P5 (</span><span style="font-style: italic;">from slide 11)</span><span
- style="font-style: italic;"></span><br>
+      <div style="text-align: center;">Lecture P5<span
+ style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 8</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 9</td>
+ valign="top">Mar 9<br>
+      <div style="text-align: center;">Lectures P5, M1<span
+ style="font-style: italic;"></span> </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 10</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 14</td>
+ valign="top">Mar 14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M1 (</span><span style="font-style: italic;">from slide 10)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 16</td>
@@ -246,8 +252,8 @@ Break</span><br>
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 30<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 2</span><br>
+      <div style="text-align: center;">Due:
+Lab 2<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
