--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -27,10 +27,10 @@ AND PROGRAMS<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due March 30.&nbsp;
 	<a href="../labs/lab 2 pthreads and sems.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 27.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
-disk image,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
-file.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
+	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
+	file</a>.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
