--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -237,13 +237,14 @@ Balanced Trees<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-11 (from slide 33), Review</span><br>
-      </div>
+      <div style="text-align: center;">Review </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 16</td>
+ valign="top">Mar 16<br>
+      <div style="text-align: center;">Lecture
+9 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 17</td>
       <td
  style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
@@ -288,6 +289,8 @@ Break</span><br>
  valign="top">Mar 27 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Review</span><br>
+      </div>
       <div style="text-align: center;">Due:
 Project 2<br>
       </div>
