--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -203,13 +203,15 @@ Lab 1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M1 (</span><span style="font-style: italic;">from slide 10)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span>Lecture M1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 16</td>
+ valign="top">Mar 16<br>
+      <div style="text-align: center;">Lecture M2<span
+ style="font-style: italic;"></span> </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 17</td>
     </tr>
     <tr>
@@ -247,7 +249,11 @@ Break</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 27 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 28 </td>
+ valign="top">Mar 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M2 (</span><span style="font-style: italic;">from slide 20)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
