--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -242,8 +242,8 @@ Balanced Trees<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 16<br>
-      <div style="text-align: center;">Lecture
-9 </div>
+      <div style="text-align: center;">Lecture 11, Review<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 17</td>
       <td
@@ -302,7 +302,8 @@ Project 2<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 31 </td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">12:
+Sets and Maps<br>
       </td>
     </tr>
     <tr>
